# KateCodeinfo

./: README.txt
src/: CMakeLists.txt  Messages.sh  btfileindexer.cpp  btfileindexer.h  codeinfoconfigwidget.ui  codeinfodatabase.cpp  codeinfodatabase.h  codeinfoparser.cpp  codeinfoparser.h  codeinfowidget.ui  katecodeinfo.cpp  katecodeinfo.h  katecodeinfoplugin.desktop  kciconfig.cpp  kciconfig.h  kciconfig.ui  kciparser.cpp  kciparser.h  kciplugin.cpp  kciplugin.h  kciview.cpp  kciview.h  kciview.ui
